Merged revisions 69664 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r69664 | hirokazu.yamamoto | 2009-02-16 18:13:20 +0900 | 2 lines

  Issue #5249: time.strftime returned malformed string when format string
  contained non ascii character on windows.
........